# Roggo-Stats

./: .drone.yaml  .gitignore  LICENSE  dockercompose.yml  egui-wasm-builder.drone.yaml  readme.md  roggo-stats.drone.yaml  roggo-web.drone.yaml  start_development.bat
Docs/: ballchasing_wrapper_components.puml  container.puml  containers.puml  context.puml  requirements.md  roggo_discord_bot_container.puml
RoggoStats/roggo_agent/: Cargo.toml  test_yes.db
RoggoStats/roggo_agent/docs/: components.puml
RoggoStats/roggo_agent/src/: lib.rs  main.rs  old.rs
RoggoStats/roggo_agent/src/core/: agent.rs  agent_supervisor.rs  aggregator.rs  config_watcher.rs  deserializer.rs  error.rs  game_stat_collector.rs  logging.rs  mod.rs  models.rs  packet_collector.rs  rocket_league_api.rs  test_file_reader.rs  windows_api.rs
RoggoStats/roggo_agent/src/core/api/: contract.rs  dto.rs  error.rs  mappers.rs  mod.rs  web_api.rs
RoggoStats/roggo_agent/src/core/bl/: feature.rs  game_stat_collector.rs  intermediate_models.rs  mod.rs  query_models.rs
RoggoStats/roggo_agent/src/core/db/: error.rs  mod.rs  repository.rs  repository_inserts.rs  repository_queries.rs
RoggoStats/roggo_agent/src/core/db/sql/: average_enemy_core_stats.sql  average_stats_for_player_and_friends.sql  average_team_mate_core_stats.sql  average_team_player_advanced_stats.sql  average_team_player_core_stats.sql  init.sql  insert_ball_hit_players.sql  insert_clock_samples.sql  insert_crossbar_hits.sql  insert_goal_details.sql  insert_player.sql  insert_player_stats.sql  insert_team.sql  instert_crossbar_hits.sql  session_matches.sql  upsert_player.sql
RoggoStats/roggo_agent/src/core/db/sql/insert/: ball_hits.sql  goal_details.sql  match.sql  statfeed_events.sql  timeline_instant.sql  upsert_global_player.sql
RoggoStats/roggo_agent/src/core/db/sql/migrations/: v1.sql
RoggoStats/roggo_agent/src/core/debug/: mod.rs  packet_collector.rs  test_file_reader.rs
RoggoStats/roggo_agent/src/core/models/: api_models.rs  game_stats.rs  intermediate_models.rs  mod.rs
RoggoStats/roggo_agent/src/core/rl_api/: aggregator.rs  deserializer.rs  error.rs  mod.rs  models.rs  rocket_league_api.rs
RoggoStats/roggo_agent/src/db/: repository.rs
RoggoStats/roggo_agent/src/db/sql/: init.sql  insert_match.sql  insert_player_stats.sql
RoggoStats/roggo_agent/src/runtimes/: console.rs  mod.rs  tray.rs
RoggoStats/roggo_agent/src/settings/: mod.rs  models.rs
RoggoStats/roggo_live_service/: Cargo.toml  Dockerfile  docker-compose.yaml  index.html
RoggoStats/roggo_live_service/patch_notes/: v0.5.0.md  v0.6.0.md
RoggoStats/roggo_live_service/src/: main.rs
RoggoStats/roggo_live_service/src/core/: api.rs  contract.rs  dto.rs  links.rs  mod.rs  time.rs
RoggoStats/roggo_live_service/src/core/ui/: app.rs  install_ui.rs  match_overview_ui.rs  match_ui.rs  mod.rs  patchnotes_ui.rs  session_ui.rs  tasks.rs
RoggoStats/roggo_live_service/trunk_builder/: Dockerfile  build.bat
(+576 files in other folders)
