[package]
name = "roggo_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = "0.29.0"
futures-util = { version = "0.3.32", features = ["sink"] }

chrono = "0.4.44"
tray-icon = "0.23.1"
winit = "0.30.13"
open = "5.3.4"
serde = "1.0.228"
serde_json = "1.0.149"
uuid = { version = "1", features = ["serde"] }
rusqlite = { version = "0.39.0", features = ["bundled", "uuid"] }

[profile.dev]
opt-level = 0
debug = true