[package]
name = "roggo_live_service"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
serde_json = "1"
wasm-bindgen-futures = "0.4"
futures-util = "0.3"
gloo-net = "0.6"
web-sys = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }
